Lh 2290 project webhooks management (#2747)
* LH-2290 webhook api

* create webhook for project form

* add webhooks permission

* add created_at and updated_at to webhook_subscriptions table

* migration to add created_at and updated_at

* create webhook

* fix rubocop and eslint warnings

* add actions menu

* soft delete webhook

* add migration for auth_type columns and move data from auth_enabled to auth_type

* form changes

* fix search

* fix policies

* make toggle active work

* add decorator for webhook dates

* fix existing webhook publish code with has_many association

* send_test form changes

* send payload for test to api

* add dummy payloads for different events

* fix associations for webhook

* webhook edit functionality

* handle topics edit

* fix eslint

* fix rubocop

* fix eslint

* add specs

* add update webhook specs

* fix rubocop

* fix rubocop

* fix rubocop

* remove enable/disable code

* correct structure.sql file

* remove unused var

* fix specs

* fix v1 specs

* fix rubocop

* fix rubocop

* fix specs

* fix specs

* add translations

* normalize translations to fix build

* fix ci build

* fix eslint

* fix eslint

* fix ci build

* fix eslint

* fix eslint

* fix eslint

* review changes

* truncate url and add copy functionality for same

* add missing translations

* add webhook permission to new project admin ui

* fix css for topics

* add error msg for v1 api for more than 1 subscription

* add missing spec

* use codemirror for json response

* send test changes

* add copy payload functionality

* add copy payload functionality

* fix rubocop

* style fixes

* translations and spec changes

* use resource form instead of modal

* add validation for v1 webhook update

* codemirror css changes

* use same component for add/edit webhook

* add readable msg for user

* Fix member action for
