# config/routes.rb
@@ -1148,6 +1148,11 @@ Rails.application.routes.draw do
           jsonapi_resources :design_settings, only: %i[index update] do
             resource :uploads, only: %i[update]
           end
+          jsonapi_resources :projects do
+            jsonapi_resources :webhooks do
+              post :send_test
+            end
+          end
           jsonapi_resources :profile_settings, only: %i[index update]
           jsonapi_resources :dashboards, only: %i[index show create update] do
             patch :upload_image
